Fix read content too large

--- a/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
+++ b/frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Verdana&display=swap');
 .content
 {
-    width: 1300px;
+    width: 75%;
     background-color: black;
     background-color: white;
     border-top: 1px solid rgb(216, 220, 223);
